Add auth skeleton pages, routes and controller

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,4 @@
 <%- include('includes/head', { title: 'Home page' }) %>
+<%- include('includes/header') %>
 <h1>Hiya</h1>
+<%- include('includes/footer') %>
