Add basic signup form and restructure views folder

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('includes/head', { title: 'Home page' }) %>
-<%- include('includes/header') %>
-<h1>Hiya</h1>
-<%- include('includes/footer') %>
+<%- include('customer/includes/head', { pageTitle: 'Home page' }) %>
+<%- include('customer/includes/header') %>
+<h1>Home Page</h1>
+<%- include('customer/includes/footer') %>
