--- a/views/customer/includes/head.ejs
+++ b/views/customer/includes/head.ejs
@@ -9,4 +9,12 @@
     <% } else { %>
       <title>Online Super Shop</title>
     <% } %>
-    <link rel="stylesheet" href="/styles/shared.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles/base.css" />
+  </head>
+</html>
