Add forms styling

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -65,6 +65,7 @@ a {
 }
 
 .btn {
+  font: inherit;
   cursor: pointer;
   padding: var(--space-2) var(--space-6);
   background-color: var(--color-primary-500);
