--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,5 +1,20 @@
 input,
 select,
-button {
+textarea {
   font: inherit;
+  padding: var(--space-2);
+  border-radius: var(--border-radius-medium);
+  border: none;
+  width: 90%;
+}
+
+form hr {
+  border-color: var(--color-primary-200);
+  margin: var(--space-6) var(--space-4);
+}
+
+label {
+  color: var(--color-gray-50);
+  display: block;
+  margin-bottom: var(--space-2);
 }
