--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -6,7 +6,7 @@
   <%- include('includes/header') %>
   <main>
     <h1>Create New Account</h1>
-    <form action="" method="POST">
+    <form action="/signup" method="POST">
       <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
       <p>
         <label for="email">Email</label>
