--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,12 @@
-<%- include('includes/head', { pageTitle: 'Home page' }) %>
-<%- include('includes/header') %>
-<h1>Home Page</h1>
-<%- include('includes/footer') %>
+<%- include('includes/head', { pageTitle: 'All products' }) %>
+</head>
+<body>
+  <%- include('includes/header') %>
+  <main>
+    <h1>Home Page</h1>
+    <p>Welcome to our online shop! We offer a wide range of essential products to help you and your loved ones live life to the fullest. Our selection includes everything from food and household items to health and beauty products, all at affordable prices.</p>
+    <p>We know that life can be unpredictable, which is why we strive to make shopping as convenient as possible. With just a few clicks, you can have all of your essentials delivered straight to your doorstep.</p>
+    <p>Thank you for choosing us as your go-to source for all of your essential needs. We hope to see you again soon!</p>
+  </main>
+  <%- include('includes/footer') %>
+</body>
