--- a/views/errors/403.ejs
+++ b/views/errors/403.ejs
@@ -1,1 +1,10 @@
-<h1>403 Unauthorized access</h1>
+<%- include('includes/head', { pageTitle: 'Unauthorized access' }) %>
+</head>
+<body>
+  <%- include('includes/header') %>
+  <main>
+    <h1>403 Unauthorized access</h1>
+    <p><a class="btn" href="/">Back to safety!</a></p>
+  </main>
+  <%- include('includes/footer') %>
+</body>
