--- a/views/errors/500.ejs
+++ b/views/errors/500.ejs
@@ -1,1 +1,11 @@
-<h1>500 Something went wrong</h1>
+<%- include('includes/head', { pageTitle: 'Error occurred' }) %>
+</head>
+<body>
+  <%- include('includes/header') %>
+  <main>
+    <h1>Something went wrong...</h1>
+    <p>A server error occurred.</p>
+    <p><a class="btn" href="/">Back to safety!</a></p>
+  </main>
+  <%- include('includes/footer') %>
+</body>
