--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -4,6 +4,14 @@
     <ul>
       <li><a href="/login">Login</a></li>
       <li><a href="/signup">Sign up</a></li>
+      <% if (locals.isAuth) { %>
+        <li>
+          <form action="/logout" method="POST">
+            <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
+            <button>Logout</button>
+          </form>
+        </li>
+      <% } %>
     </ul>
   </nav>
 </header>
