--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -8,7 +8,7 @@
         <li>
           <form action="/logout" method="POST">
             <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
-            <button>Logout</button>
+            <button class="btn">Logout</button>
           </form>
         </li>
       <% } %>
