Add session input flash data support

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -79,3 +79,20 @@ a {
   background-color: var(--color-primary-700);
   border-color: var(--color-primary-700);
 }
+
+.error {
+  background-color: var(--color-error-100);
+  border-radius: var(--border-radius-medium);
+  color: var(--color-error-500);
+  padding: var(--space-2) var(--space-4);
+}
+
+.error h2 {
+  font-size: 1.25rem;
+  margin: var(--space-2);
+  text-transform: uppercase;
+}
+
+.error p {
+  margin: var(--space-2);
+}
