--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -6,11 +6,17 @@
   <%- include('includes/header') %>
   <main>
     <h1>Login</h1>
+    <% if (inputData.errorMessage) { %> 
+      <section class="error">
+        <h2>Invalid Input</h2>
+        <p><%= inputData.errorMessage %></p>
+      </section>
+    <% } %>
     <form action="/login" method="POST">
       <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
       <p>
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" required  />
+        <input type="email" name="email" id="email" value="<%= inputData.email %>" required  />
       </p>
       <p>
         <label for="password">Password</label>
@@ -18,8 +24,9 @@
           type="password"
           name="password"
           id="password"
+          value="<%= inputData.password %>"
           required
-          minlength="6"
+          minlength="8"
         />
       </p>
 
