--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -6,15 +6,21 @@
   <%- include('includes/header') %>
   <main>
     <h1>Create New Account</h1>
+    <% if (inputData.errorMessage) { %> 
+      <section class="error">
+        <h2>Invalid Credentials</h2>
+        <p><%= inputData.errorMessage %></p>
+      </section>
+    <% } %>
     <form action="/signup" method="POST">
       <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
       <p>
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" required  />
+        <input type="email" name="email" id="email" value="<%= inputData.email %>" />
       </p>
       <p>
         <label for="confirm-email">Confirm Email</label>
-        <input type="email" name="confirm-email" id="confirm-email" required />
+        <input type="email" name="confirm-email" id="confirm-email" value="<%= inputData['confirm-email'] %>" required />
       </p>
       <p>
         <label for="password">Password</label>
@@ -22,18 +28,19 @@
           type="password"
           name="password"
           id="password"
+          value="<%= inputData.password %>"
           required
-          minlength="6"
+          minlength="8"
         />
       </p>
       <hr />
       <p>
         <label for="fullname">Full Name</label>
-        <input type="text" name="full-name" id="fullname" required />
+        <input type="text" name="full-name" id="fullname" value="<%= inputData['full-name'] %>" required />
       </p>
       <p>
         <label for="street">Street</label>
-        <input type="text" name="street" id="street" required />
+        <input type="text" name="street" id="street" value="<%= inputData.street %>" required />
       </p>
       <p>
         <label for="postcode">Post code</label>
@@ -41,18 +48,19 @@
           type="text"
           name="postcode"
           id="postcode"
+          value="<%= inputData.postcode %>"
           minlength="4"
           required
         />
       </p>
       <p>
         <label for="city">City</label>
-        <input type="text" name="city" id="city" required />
+        <input type="text" name="city" id="city" value="<%= inputData.city %>" required />
       </p>
       <!-- TODO: add options based on DB. (PS. Website don't ship WORLDWIDE and don't want to update manually, however they allow to register with other)  -->
       <p>
         <label for="country">Country</label>
-        <select name="country" id="country" required>
+        <select name="country" value="<%= inputData.country %>" id="country" required>
           <option value="" selected disabled hidden>Select country</option>
           <option value="uk">United Kingdom</option>
           <option value="us">United States of America</option>
