--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -2,8 +2,26 @@
   <div><a href="/">TE</a></div>
   <nav>
     <ul>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/signup">Sign up</a></li>
+      <li><a href="/">Home</a></li>
+
+      <% if (!locals.isAdmin) { %>
+        <li><a href="/cart">Cart</a></li>
+      <% } %> 
+
+      <% if (locals.isAuth && !locals.isAdmin) { %>
+          <li><a href="/orders">Orders</a></li>
+      <% } %> 
+
+      <% if (locals.isAdmin) { %>
+        <li><a href="/admin/products">Manage Products</a></li>
+        <li><a href="/admin/products">Manage Orders</a></li>
+      <% } %>
+
+      <% if (!locals.isAuth) { %>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/signup">Signup</a></li>
+      <% } %> 
+      
       <% if (locals.isAuth) { %>
         <li>
           <form action="/logout" method="POST">
