--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -16,5 +16,5 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/base.css" />
-  </head>
-</html>
+    <link rel="stylesheet" href="/styles/navigation.css" />
+    <script src="/scripts/mobile.js" defer></script>
