Add admin routes/controllers/views

--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -47,6 +47,10 @@
   background-color: var(--color-gray-400);
 }
 
+#logout-btn {
+  background-color: transparent;
+}
+
 #mobile-menu {
   display: none;
 }
