--- a/views/includes/nav-items.ejs
+++ b/views/includes/nav-items.ejs
@@ -21,7 +21,7 @@
   
   <% if (locals.isAuth) { %>
     <li>
-      <form action="/logout" method="POST">
+      <form id="logout-btn" action="/logout" method="POST">
         <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
         <button>Logout</button>
       </form>
