Add new product form page

--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -7,7 +7,7 @@ form {
   max-width: 25rem;
   background-color: var(--color-gray-700);
   margin: var(--space-8) auto;
-  padding: var(--space-4);
+  padding: var(--space-4) var(--space-8);
   text-align: center;
   border-radius: var(--border-radius-large);
 }
