--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -49,8 +49,28 @@ body {
 main {
   width: 100%;
   max-width: 60rem;
-  margin: 0 auto;
+  margin: var(--space-6) auto;
   padding: 0 var(--space-4);
+}
+
+footer {
+  display: flex;
+  height: 6rem;
+  width: 100%;
+  max-width: 60rem;
+  padding: 0 var(--space-4);
+  margin: var(--space-8) auto 0 auto;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid var(--color-primary-200);
+}
+
+footer p {
+  color: var(--color-gray-100);
+}
+
+h1 {
+  font-size: 2rem;
 }
 
 ul,
@@ -79,6 +99,16 @@ a {
 .btn:hover {
   background-color: var(--color-primary-700);
   border-color: var(--color-primary-700);
+}
+
+.btn-alt {
+  background-color: transparent;
+  color: var(--color-primary-500);
+}
+
+.btn-alt:active,
+.btn-alt:hover {
+  background-color: var(--color-primary-500-bg);
 }
 
 .error {
