--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -3,8 +3,14 @@
 <body>
   <%- include('includes/header') %>
   <main>
-    <h1>All products (Admin)</h1>
-    <p>List of products...</p>
+    <h1>All products</h1>
+    <section>
+      <h2>Manage products</h2>
+      <p><a class="btn" href="/admin/products/new">Add new product</a></p>
+    </section>
+    <section>
+      <p>List of products...</p>
+    </section>
   </main>
   <%- include('includes/footer') %>
 </body>
