--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -10,7 +10,7 @@
   height: 5rem;
   align-items: center;
   padding: 0 var(--space-4);
-  border-bottom: 0.75px solid var(--color-primary-400);
+  border-bottom: 1px solid var(--color-primary-200);
   background-color: var(--color-gray-500);
 }
 
@@ -29,7 +29,7 @@
 }
 .nav-items a:hover,
 .nav-items a:active {
-  background-color: var(--color-gray-400);
+  background-color: var(--color-primary-500-bg);
 }
 
 .nav-items button {
@@ -132,10 +132,26 @@
 }
 
 @keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-moz-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-o-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-ms-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
