--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,7 @@
   <footer>
-    This is footer
+    <section>
+      <p>TEssentials Shop &copy 2022</p>
+    </section>
   </footer>
 </body>
 </html>
