--- a/views/admin/products/new-product.ejs
+++ b/views/admin/products/new-product.ejs
@@ -6,8 +6,7 @@
   <main>
     <section>
       <h1>Add new product</h1>
-      <form action="/admin/products" method="POST">
-        <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
+      <form action="/admin/products?_csrf=<%= locals.csrfToken %>" method="POST" enctype="multipart/form-data">
         <p>
           <label for="title">Title</label>
           <input type="text" name="title" id="title" maxlength="50" required>
@@ -25,7 +24,7 @@
           <input type="number" name="price" id="price" min="0.01" step="0.01" required>
         </p>
         <p>
-          <label for="description">Price</label>
+          <label for="description">Description</label>
           <textarea name="description" id="description" row="7" required></textarea>
         </p>
         <button class="btn">Submit</button>
