--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <% if (typeof(pageTitle) == "string") { %>
-      <title>Online Super Shop - <%= pageTitle %></title>
+      <title>TEssentials Shop - <%= pageTitle %></title>
     <% } else { %>
-      <title>Online Super Shop</title>
+      <title>TEssentials Shop</title>
     <% } %>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
