Add admin all products list

--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,15 +1,22 @@
 <%- include('includes/head', { pageTitle: 'Manage products' }) %>
+  <link rel="stylesheet" href="/styles/products.css">
 </head>
 <body>
   <%- include('includes/header') %>
   <main>
-    <h1>All products</h1>
+    <h1>Products Administration</h1>
     <section>
       <h2>Manage products</h2>
       <p><a class="btn" href="/admin/products/new">Add new product</a></p>
     </section>
     <section>
-      <p>List of products...</p>
+      <ul class="products">
+        <% for (const product of products) { %> 
+          <li>
+            <%- include('includes/product-item', { product }) %>
+          </li>
+        <% } %> 
+      </ul>
     </section>
   </main>
   <%- include('includes/footer') %>
