--- a/views/admin/products/new-product.ejs
+++ b/views/admin/products/new-product.ejs
@@ -1,35 +1,18 @@
 <%- include('includes/head', { pageTitle: 'Add New Product' }) %>
   <link rel="stylesheet" href="/styles/forms.css">
+  <script src="/scripts/image-preview.js" defer></script>
 </head>
 <body>
   <%- include('includes/header') %>
   <main>
     <section>
       <h1>Add new product</h1>
-      <form action="/admin/products?_csrf=<%= locals.csrfToken %>" method="POST" enctype="multipart/form-data">
-        <p>
-          <label for="title">Title</label>
-          <input type="text" name="title" id="title" maxlength="50" required>
-        </p>
-        <p>
-          <label for="image">Image</label>
-          <input type="file" name="image" id="image" accept="image/png,image/jpg,image/webp" required>
-        </p>
-        <p>
-          <label for="summary">Summary</label>
-          <input type="text" name="summary" id="summary" maxlength="255" required>
-        </p>
-        <p>
-          <label for="price">Price</label>
-          <input type="number" name="price" id="price" min="0.01" step="0.01" required>
-        </p>
-        <p>
-          <label for="description">Description</label>
-          <textarea name="description" id="description" row="7" required></textarea>
-        </p>
-        <button class="btn">Submit</button>
-        <button type="reset" class="btn btn-alt">Clear</button>
-      </form>
+      <%- include('includes/product-form', { submitPath: '/admin/products', product: {
+        title: '',
+        price: '',
+        summary: '',
+        description: '',
+      }, imageRequired: true }) %>
     </section>
   </main>
   <%- include('includes/footer') %>
