Add Ajax product deletion in admin panel

--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,5 +1,6 @@
 <%- include('includes/head', { pageTitle: 'Manage products' }) %>
   <link rel="stylesheet" href="/styles/products.css">
+  <script src="/scripts/products-management.js" defer></script>
 </head>
 <body>
   <%- include('includes/header') %>
