--- a/views/admin/products/includes/product-item.ejs
+++ b/views/admin/products/includes/product-item.ejs
@@ -3,6 +3,6 @@
   <h2><%= product.title %></h2>
   <div class="product-actions">
     <a class="btn" href="/admin/products/edit/<%= product.id %>">View & Edit</a>
-    <button class="btn btn-alt">Delete</button>
+    <button class="btn btn-alt" data-product-id="<%= product.id %>" data-csrf-token="<%= locals.csrfToken %>">Delete</button>
   </div>
 </article>
