--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -1,15 +1,10 @@
-<%- include('includes/head', { pageTitle: 'Manage products' }) %>
+<%- include('includes/head', { pageTitle: 'All products' }) %>
   <link rel="stylesheet" href="/styles/products.css">
-  <script src="/scripts/products-management.js" defer></script>
 </head>
 <body>
   <%- include('includes/header') %>
   <main>
-    <h1>Products Administration</h1>
-    <section>
-      <h2>Manage products</h2>
-      <p><a class="btn" href="/admin/products/new">Add new product</a></p>
-    </section>
+    <h1>All products</h1>
     <section>
       <ul class="products-grid">
         <% for (const product of products) { %> 
