--- a/views/includes/nav-items.ejs
+++ b/views/includes/nav-items.ejs
@@ -1,5 +1,6 @@
 <ul class="nav-items">
-  <li><a href="/">Shop</a></li>
+  <li><a href="/">Home</a></li>
+  <li><a href="/products">Products</a></li>
 
   <% if (!locals.isAdmin) { %>
     <li><a href="/cart">Cart</a></li>
