--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -24,8 +24,14 @@
 }
 
 .product-item h2 {
-  margin: var(--space-4);
+  margin: var(--space-2);
+  margin-top: var(--space-4);
   font-size: 1.3rem;
+}
+
+.product-item p {
+  padding: 0;
+  margin: 0 0 var(--space-4) 0;
 }
 
 .product-actions {
@@ -38,4 +44,43 @@
 
 .product-actions > * {
   width: 100%;
+}
+
+#product-details {
+  display: flex;
+  flex-direction: column;
+}
+
+#product-details h2 {
+  margin: 0;
+}
+
+#product-details header {
+  display: flex;
+  margin-top: var(--space-4);
+  padding: var(--space-8);
+  background-color: var(--color-gray-600);
+  gap: var(--space-8);
+  border-radius: var(--border-radius-large);
+}
+
+#product-details img {
+  width: 100%;
+  height: 20rem;
+  object-fit: cover;
+  border-radius: var(--border-radius-large);
+}
+
+#product-info {
+  width: 100%;
+}
+
+@media (max-width: 48rem) {
+  #product-details header {
+    display: inline-block;
+  }
+
+  #product-info {
+    padding-top: var(--space-4);
+  }
 }
