--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,6 @@
   <footer>
     <section>
-      <p>TEssentials Shop &copy 2022</p>
+      <p>True Essentials Shop &copy 2022</p>
     </section>
   </footer>
 </body>
