--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,5 +1,5 @@
 <header id="main-header">
-  <div id="logo"><a href="/">TEssentials</a></div>
+  <div id="logo"><a href="/">TEss</a></div>
   <nav>
     <%- include('nav-items') %> 
   </nav>
