--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -17,10 +17,10 @@
 }
 
 .product-item img {
-  width: 100%;
-  height: 10rem;
   object-fit: cover;
   object-position: center;
+  width: 100%;
+  height: 10rem;
 }
 
 .product-item h2 {
@@ -65,14 +65,22 @@
 }
 
 #product-details img {
-  width: 100%;
-  height: 20rem;
   object-fit: cover;
   border-radius: var(--border-radius-large);
+  width: 100%;
+  height: 20rem;
+}
+
+#product-details section {
+  margin: auto var(--space-8);
 }
 
 #product-info {
   width: 100%;
+}
+
+#product-description {
+  white-space: pre-wrap;
 }
 
 @media (max-width: 48rem) {
