--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -7,6 +7,7 @@ html {
 
   --color-gray-50: rgb(243, 236, 230);
   --color-gray-100: rgb(207, 201, 195);
+  --color-gray-200: rgb(155, 152, 150);
   --color-gray-300: rgb(99, 92, 86);
   --color-gray-400: rgb(70, 65, 60);
   --color-gray-500: rgb(37, 34, 31);
