Update Cart management logic

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -1,4 +1,5 @@
 .cart-item {
+  height: 10rem;
   width: 100%;
   display: flex;
   margin-bottom: var(--space-6);
@@ -17,6 +18,10 @@
 }
 
 .cart-item-info {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-self: flex-start;
   flex-grow: 4;
 }
@@ -26,27 +31,62 @@
   font-size: 1.5rem;
 }
 
+.cart-item-info a {
+  display: inline;
+  color: var(--color-gray-50);
+}
+
+.cart-item-info a:hover,
+.cart-item-info a:active {
+  color: var(--color-primary-500);
+}
+
+.cart-item-quantity-action button {
+  position: relative;
+}
+
+.cart-item-quantity-action button span {
+  position: absolute;
+  top: -9%;
+  left: -10%;
+}
+
+.cart-item-info p {
+  margin-top: 0;
+}
+
+.cart-item-info input {
+  margin: 0 var(--space-1);
+  text-align: center;
+  font: inherit;
+  font-size: 1.1rem;
+  height: 2rem;
+  width: 2.75rem;
+  border-radius: var(--border-radius-medium);
+  border: 0;
+}
+
+.cart-item-info input:disabled {
+  background-color: var(--color-gray-50);
+}
+
+.cart-item-info button {
+  text-align: center;
+  font-weight: bold;
+  padding: 0;
+  height: 1.75rem;
+  width: 1.75rem;
+}
+
+.cart-item-quantity-action {
+  display: flex;
+  align-items: center;
+  gap: var(--space-1);
+}
+
 .cart-item-original-price {
   color: var(--color-gray-200);
   font-style: italic;
-}
-
-.cart-item-actions {
-  flex-grow: 1;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.cart-item-actions input {
-  margin: var(--space-8);
-  text-align: center;
-  font: inherit;
-  font-size: 1.25rem;
-  height: 2.25rem;
-  width: 3rem;
-  border-radius: var(--border-radius-medium);
-  border: 0;
 }
 
 .cart-total {
@@ -74,6 +114,7 @@
 
 @media (max-width: 48rem) {
   .cart-item {
+    height: 100%;
     flex-direction: column;
     gap: 0;
   }
@@ -87,16 +128,6 @@
 
   .cart-item-info {
     margin-top: var(--space-4);
-  }
-
-  .cart-item-actions {
-    width: 100%;
-    flex-direction: column;
-  }
-
-  .cart-item-actions input {
-    margin-top: 0;
-    margin-bottom: var(--space-4);
   }
 
   .cart-item-buttons {
