--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -14,7 +14,7 @@
       <% } %> 
     </ul>
     <div class="cart-total">
-      <p>Total: $<span class="cart-total-price"><%= locals.cart.totalAmount.toFixed(2) %></span></p>
+      <p>Total: $<span class="cart-total-price"><%= locals.cart.totalAmount.toFixed(2).replace('-0', '0') %></span></p>
       <button class="btn">Checkout</button>
     </div>
   </main>
