--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -1,3 +1,11 @@
+#cart-empty-section {
+  text-align: center;
+}
+
+#cart-empty-section p {
+  padding-bottom: var(--space-2);
+}
+
 .cart-item {
   height: 10rem;
   width: 100%;
@@ -96,10 +104,17 @@
 }
 
 .cart-total p {
-  margin-top: 0;
+  margin: 0;
+}
+
+.cart-total p:nth-of-type(1) {
   font-size: 1.25rem;
   font-weight: 700;
   color: var(--color-primary-400);
+}
+
+.cart-total p:nth-of-type(2) {
+  margin: var(--space-4) 0 var(--space-2) 0;
 }
 
 .cart-item-buttons {
@@ -131,6 +146,8 @@
   }
 
   .cart-item-buttons {
+    padding-top: var(--space-2);
+    margin-bottom: calc(var(--space-2) * -1);
     width: 100%;
   }
 
