Change dollar sign to sterling pound sign

--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -79,6 +79,12 @@
   width: 100%;
 }
 
+#product-price {
+  margin-top: var(--space-1);
+  font-weight: 700;
+  font-size: 1.1rem;
+}
+
 #product-description {
   white-space: pre-wrap;
 }
