--- a/views/customer/cart/includes/cart-item.ejs
+++ b/views/customer/cart/includes/cart-item.ejs
@@ -5,9 +5,9 @@
       <a href="/products/<%= item.product.id%>"><%= item.product.title %></a>
     </h2>
     <p>
-      $<span class="cart-item-price"><%= item.totalPrice.toFixed(2) %></span>
+      £<span class="cart-item-price"><%= item.totalPrice.toFixed(2) %></span>
       <span class="cart-item-original-price"
-        >($<%= item.product.price.toFixed(2) %>)</span
+        >(£<%= item.product.price.toFixed(2) %>)</span
       >
     </p>
     <div
