--- a/views/includes/product-item.ejs
+++ b/views/includes/product-item.ejs
@@ -1,7 +1,7 @@
 <article class="product-item">
   <img src="<%= product.imageURL %>" alt="Image of <%= product.title %>" />
   <h2><%= product.title %></h2>
-  <p>$<%= product.price.toFixed(2) %></p>
+  <p>£<%= product.price.toFixed(2) %></p>
   <div class="product-actions">
     <% if (locals.isAdmin) { %> 
       <a class="btn" href="/admin/products/edit/<%= product.id %>">View & Edit</a>
