--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -111,10 +111,7 @@
   font-size: 1.25rem;
   font-weight: 700;
   color: var(--color-primary-400);
-}
-
-.cart-total p:nth-of-type(2) {
-  margin: var(--space-4) 0 var(--space-2) 0;
+  margin-bottom: var(--space-2); 
 }
 
 .cart-item-buttons {
