--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -18,7 +18,10 @@
         <div class="cart-total">
           <p>Total: £<span class="cart-total-price"><%= locals.cart.totalAmount.toFixed(2).replace('-0', '0') %></span></p>
           <% if (locals.isAuth) { %>
-            <button class="btn">Checkout</button>
+            <form action="/orders" method="POST">
+              <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
+              <button type="submit" class="btn">Checkout</button>
+            </form>
           <% } else { %>
             <p>You must be logged in to proceed to checkout.</p>
             <p>Please <a href="/login">log in</a> or <a href="/signup">create an account</a>.</p> 
