--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -20,7 +20,7 @@
   object-fit: cover;
   object-position: center;
   width: 100%;
-  height: 10rem;
+  height: 12.5rem;
 }
 
 .product-item h2 {
@@ -36,10 +36,9 @@
 
 .product-actions {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   padding: 0 var(--space-4) var(--space-4) var(--space-4);
-  gap: var(--space-2);
 }
 
 .product-actions > * {
@@ -67,7 +66,8 @@
 #product-details img {
   object-fit: cover;
   border-radius: var(--border-radius-large);
-  width: 100%;
+  width: 45%;
+  min-width: 45%;
   height: 20rem;
 }
 
@@ -90,6 +90,10 @@
 }
 
 @media (max-width: 48rem) {
+  #product-details img {
+    min-width: 100%;
+  }
+
   #product-details header {
     display: inline-block;
   }
