--- a/views/customer/orders/all-orders.ejs
+++ b/views/customer/orders/all-orders.ejs
@@ -1,10 +1,14 @@
-<%- include('includes/head', { pageTitle: 'All Your Orders' }) %>
+<%- include('includes/head', { pageTitle: locals.isAdmin ? 'All Orders' : 'All Your Orders' }) %>
   <link rel="stylesheet" href="/styles/orders.css">
 </head>
 <body>
   <%- include('includes/header') %>
   <main>
-    <h1>All Your Orders</h1>
+    <% if (!locals.isAdmin) { %> 
+      <h1>All Your Orders</h1>
+    <% } else { %> 
+      <h1>All Shop Orders</h1>
+    <% } %> 
     <section>
       <ol class="orders-list">
         <% for (const order of orders) { %>
