--- a/views/includes/nav-items.ejs
+++ b/views/includes/nav-items.ejs
@@ -1,8 +1,8 @@
 <ul class="nav-items">
   <li><a href="/">Home</a></li>
-  <li><a href="/products">Products</a></li>
 
   <% if (!locals.isAdmin) { %>
+    <li><a href="/products">Products</a></li>
     <li><a href="/cart">Cart <span class='badge'><%= locals.cart.totalQuantity %></span></a></li>
   <% } %> 
 
@@ -12,7 +12,7 @@
 
   <% if (locals.isAdmin) { %>
     <li><a href="/admin/products">Manage Products</a></li>
-    <li><a href="/admin/products">Manage Orders</a></li>
+    <li><a href="/admin/orders">Manage Orders</a></li>
   <% } %>
 
   <% if (!locals.isAuth) { %>
