--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -38,6 +38,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: var(--space-1);
   padding: 0 var(--space-4) var(--space-4) var(--space-4);
 }
 
