fix bug && add favicon

--- a/views/customer/orders/includes/order-item.ejs
+++ b/views/customer/orders/includes/order-item.ejs
@@ -1,6 +1,6 @@
 <article class="order-item">
   <div class="order-info">
-    <h2><a href="/orders/details/<%= order.id %>">Order #<%= order.id %></a></h2>
+    <h2><a href="<%= locals.isAdmin ? '/admin' : '' %>/orders/details/<%= order.id %>">Order #<%= order.id %></a></h2>
     <p class="order-date">Created on <%= order.formattedDate %></p>
     <p>Total items: <%= order.orderData.totalQuantity %></p>
     <p>Total paid: £<%= order.orderData.totalAmount.toFixed(2) %></p>
