--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -9,6 +9,7 @@
     <% } else { %>
       <title>True Essentials Shop</title>
     <% } %>
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
