--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -18,4 +18,5 @@
     />
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/styles/navigation.css" />
+    <script src="/scripts/shared.js" defer></script>
     <script src="/scripts/mobile.js" defer></script>
